(1) The home page reports the number of jobs the user currently has in the queue. (2) After a job is created, the user is automatically brought back to home, and does not need to click on the home button himself. (3) Corrected some layout problem in default.css.

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -436,6 +436,10 @@ input.save {
     border-bottom: thin solid;
 }
 
+#listusers p {
+    text-align: center;
+}
+
 #listusers td {
     padding: 3px;
 }
